Fix app height to have no scrollbars

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,6 @@
 
 #root {
     width: 100%;
-    height: 100%;
 }
 
 a {
